# byd-n16-kbd-rgb

./: README.md  byd_n16_rgb.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
aur/: .SRCINFO  99-byd-n16-rgb.rules  PKGBUILD
